// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typist should render Typist 1 without throwing an error 1`] = `
<Typist>
  <div>
    <div
      className="type-effect"
      key="0"
    >
      <div>
        Test Typist 1
      </div>
      <style>
        
        .type-effect {
          overflow: hidden;
          white-space: nowrap;
          border-right: 0.15em solid #ecf0f1;
          animation: typing 1.25s steps(40, end),
            blink-caret 0.5s step-end infinite;
        }
        /* The typing effect */
        @keyframes typing {
          from {
            width: 0;
          }
          to {
            width: 100%;
          }
        }
        /* The typewriter cursor effect */
        @keyframes blink-caret {
          from,
          to {
            border-color: transparent;
          }
          50% {
            border-color: #ecf0f1;
          }
        }
      
      </style>
    </div>
  </div>
</Typist>
`;

exports[`Typist should render without throwing an error 1`] = `
<Typist>
  <div>
    <div
      className="type-effect"
      key="0"
    >
      <style>
        
        .type-effect {
          overflow: hidden;
          white-space: nowrap;
          border-right: 0.15em solid #ecf0f1;
          animation: typing 1.25s steps(40, end),
            blink-caret 0.5s step-end infinite;
        }
        /* The typing effect */
        @keyframes typing {
          from {
            width: 0;
          }
          to {
            width: 100%;
          }
        }
        /* The typewriter cursor effect */
        @keyframes blink-caret {
          from,
          to {
            border-color: transparent;
          }
          50% {
            border-color: #ecf0f1;
          }
        }
      
      </style>
    </div>
  </div>
</Typist>
`;
